Add explanation on strong duality

--- a/WGAN_duality.ipynb
+++ b/WGAN_duality.ipynb
@@ -154,23 +154,20 @@
     "\n",
     "고로 $\\hat{A} x = \\hat{b_\\epsilon}$의 해가 없게 되고 **Farkas theorem**에 의해\n",
     "\n",
-    "$\\hat{y}$ 가 존재하여 $\\hat{b_\\epsilon}^T\\hat{y}>0$이면서 $\\hat{A}^T\\hat{y}\\leq 0$ 이 된다. \n",
+    "$\\hat{y}$ 가 존재하여 $\\hat{b_\\epsilon}^T\\hat{y}>0$이면서 $\\hat{A}^T\\hat{y}\\leq 0$\n",
     "\n",
-    "$b^T y - z^* \\alpha  + \\epsilon \\alpha > 0$ 이고 $A^Ty-c\\alpha \\leq 0 $\n",
-    "\n"
+    "$\\Leftrightarrow b^T y - z^* \\alpha  + \\epsilon \\alpha > 0$ 이고 $A^Ty-c\\alpha \\leq 0 $\n",
+    "\n",
+    "\n",
+    "\n",
+    "$\\Leftrightarrow b^T y > \\alpha(z^* - \\epsilon)$, $c^T\\alpha \\geq A^Ty $"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$b^T y > \\alpha(z^* - \\epsilon)$, $c^T\\alpha \\geq A^Ty $"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### $\\alpha >0$\n",
     "$\\alpha z^*=\\alpha c^Tx^*\\geq (A^Ty)^Tx^*=y^TAx^*=y^Tb>\\alpha(z^*-\\epsilon)$  \n",
     "\n",
     "$\\alpha\\epsilon >0$  \n",
@@ -181,21 +178,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$y_1 = \\frac{y}{\\alpha}$"
+    "$y_\\epsilon = \\frac{y}{\\alpha}$ 라고 하자.\n",
+    "\n",
+    "그러면, $b^Ty_\\epsilon > z^*-\\epsilon$ 이고 $A^Ty_\\epsilon\\leq c$ 인 $y_\\epsilon$이 모든 $\\epsilon>0$에 대해서 존재한다고 말할 수 있다.\n",
+    "\n",
+    "한편 \n",
+    "$z^* = c^T x^* \\geq (A^Ty_\\epsilon)^T x^* = y_\\epsilon^T A x^* = y_\\epsilon^Tb=b^Ty_\\epsilon>z^*-\\epsilon$  \n",
+    "\n",
+    "$\\epsilon \\rightarrow 0$ 일 때,  $z^*>b^Ty_\\epsilon > z^*-\\epsilon$ 이고 $A^Ty_\\epsilon\\leq c$ 인 $y_\\epsilon$이 존재한다.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "그러면, $b^Ty_1 > z^*-\\epsilon$ 이고 $A^Ty_1\\leq c$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$z^* = c^T x^* \\geq (A^Ty_1)^T x^* = y_1^T A x^* = y_1^Tb=b^Ty_1$\n"
+    "**primal form**: \n",
+    "\n",
+    "minimize $z = c^Tx$ when $Ax=b$ and $x\\geq 0$ \n",
+    "\n",
+    "**dual form:**\n",
+    "\n",
+    "maximize $\\widetilde{z}=b^Ty$ when $A^Ty\\leq c$\n",
+    "\n",
+    "이 두 문제는 결국 같은 $z$를 구한다."
    ]
   }
  ],
