--- a/WGAN_duality.ipynb
+++ b/WGAN_duality.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Earth Mover's Distance"
+    "## 1. Earth Mover's Distance"
    ]
   },
   {
@@ -21,7 +21,9 @@
    "source": [
     "$l$ states로 이루어진 두 discrete probability distribution $P_r, P_\\theta$ 이 주어져있다.\n",
     "\n",
-    "$EMD(P_r, P_\\theta) = \\inf_{\\gamma \\in \\prod} \\sum_{x,y} ||x-y||\\gamma(x,y)= \\inf_{\\gamma \\in \\prod}\\mathbb{E}_{(x,y)\\sim \\gamma}||x-y||$\n",
+    "$EMD(P_r, P_\\theta) = \\inf_{\\gamma \\in \\prod} \\sum_{x,y} ||x-y||\\gamma(x,y)= \\inf_{\\gamma \\in \\prod}\\mathbb{E}_{(x,y)\\sim \\gamma}||x-y||$  \n",
+    " \n",
+    "$\\sum_x \\gamma(x,y) = P_r(y), \\sum_y \\gamma(x,y) = P_\\theta(x)$(Marginal Probability)\n",
     "\n",
     "$D=||x-y||, \\Gamma =\\gamma(x,y)$ 라고 하면, $\\Gamma, D\\in \\mathbb{R}^{l\\times l}$ 이게 되고 \n",
     "\n",
@@ -34,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Programming"
+    "## 2. Linear Programming"
    ]
   },
   {
@@ -57,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dual Form"
+    "## 3. Dual Form"
    ]
   },
   {
@@ -91,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Farkas Theorem"
+    "## 4. Farkas Theorem"
    ]
   },
   {
@@ -116,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Strong Duality"
+    "## 5. Strong Duality"
    ]
   },
   {
@@ -201,6 +203,116 @@
     "maximize $\\widetilde{z}=b^Ty$ when $A^Ty\\leq c$\n",
     "\n",
     "이 두 문제는 결국 같은 $z$를 구한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Dual implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 Strong duality를 이용해서 primal form 문제의 답을 dual form 문제의 답으로 해결해도 된다.  \n",
+    "### 6.1 Recall\n",
+    "$A = \\begin{bmatrix} 1&&1&&\\cdots &&0&&0&&\\cdots &&\\cdots&&0 &&0&& \\cdots\\\\ 0 && 0 &&\\cdots &&1 && 1 &&\\cdots &&\\cdots && 0 && 0 && \\cdots \\\\\\vdots&&\\vdots&&\\vdots &&\\vdots&&\\vdots&&\\vdots &&\\vdots&&\\vdots &&\\vdots&& \\vdots\\\\ 0 && 0 &&\\cdots &&0 && 0 &&\\cdots &&\\cdots && 1 && 1 && \\cdots  \\\\ 1 && 0 &&\\cdots &&1 && 0 &&\\cdots &&\\cdots && 1 && 0 && \\cdots \\\\ 0 && 1 &&\\cdots &&0 && 1 &&\\cdots &&\\cdots && 0 && 1 && \\cdots \\\\ \\vdots && \\vdots &&\\ddots &&\\vdots && \\vdots &&\\ddots &&\\cdots && \\vdots && \\vdots && \\ddots \\\\ 0 && 0 &&\\cdots &&0 && 0 &&\\cdots &&\\cdots && 0 && 0 && \\cdots \\end{bmatrix}\\in \\mathbb{R}^{2l\\times l^2}$  \n",
+    "\n",
+    "\n",
+    "$c^T = \\begin{bmatrix} D_{1,1} && D_{1,2}&&\\cdots&&|&&D_{2,1}&&D_{2,2}&&\\cdots&&|&&\\cdots \\end{bmatrix} $  \n",
+    "**Note**\n",
+    "1. $D_{i,i}=0$\n",
+    "2. $D_{i,j}=D_{j,i}$\n",
+    "\n",
+    "$$b = \\begin{bmatrix} P_r \\\\ P_\\theta \\end{bmatrix}$$\n",
+    "$$y^* = \\begin{bmatrix} f \\\\ g\\end{bmatrix} \\in \\mathbb{R}^{2l}$$\n",
+    "\n",
+    "* $f, g$는 $l$ dim vector이지만, 함수로 보기로 한다.\n",
+    "$$f_1,f_2,\\cdots,f_l =f(x_1),f(x_2),\\cdots f(x_l)$$\n",
+    "$$g_1,g_2,\\cdots,g_l =g(x_1),g(x_2),\\cdots g(x_l)$$\n",
+    "* $D_{i,j}=||x_i-x_j||$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.2 Dual form problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$EMD(P_r,P_\\theta)=\\max f^TP_r+g^TP_\\theta$ when $$A^Ty \\leq c\\Leftrightarrow f(x_i)+g(x_j)\\leq D_{i,j}$$\n",
+    "  \n",
+    "$$f(x_i)+g(x_i) \\leq D_{i,i}=0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "여기에서도 애매하게 설명하긴 했는데, nonnegative 한 $P_r, P_\\theta$를 이용하여 $f_TP_r+g^T_\\theta$를 최대화해야 하기 때문에 $f(x_i)+g(x_i)$가 크면 클수록 좋다. 그렇기 때문에 $f(x_i)=-g(x_i)$이어야 한다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$D_{i,j}\\geq f(x_i)+g(x_j) =f(x_i)-f(x_j)$  \n",
+    "$D_{i,j}=D_{j,i}\\geq f(x_j)-f(x_i)$\n",
+    "$\\Rightarrow |f(x_i)-f(x_j)| \\leq D_{i,j}=||x_i-x_j||$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.2.1 Lipschitz continuity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Def)** $f: \\mathbb{R}\\rightarrow \\mathbb{R}$ 가 lipschitz continuous\n",
+    "$\\Leftrightarrow$ 만약에 양수인 $K$가 존재하여 모든 실수 $x_1, x_2$에 대해\n",
+    "$|f(x_1)-f(x_2)|\\leq K|x_1-x_2|$\n",
+    "\n",
+    "\n",
+    "위의 $f$는 $K=1$인 경우의 Lipschitz continuous 를 만족하고, $||f||_{L\\leq1}$ 로 쓴다.  \n",
+    "모든 constraint의 조건들이 Lipschitz continuous를 만족하는 함수로 함축되게 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$EMD(P_r, P_\\theta) = \\sup_{||f||_{L\\leq1}} \\mathbb{E}_{x\\sim P_r}f(x)- \\mathbb{E}_{x\\sim P_\\theta} f(x)$$\n",
+    "\n",
+    "직관적으로 봤을 때, $P_r>P_\\theta$ 일 때 $f$가 크고, $P_r<P_\\theta$일 때 $f$가 작을 때 우항이 최대가 됨을 알 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Wasserstein Distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그 전까지 discrete probability distributions 들에 대해서 다뤘기 때문에 여기에서는 continuous 한 probability distribution을 다루도록 한다.\n",
+    "\n",
+    "$W(P_r, P_\\theta) = \\inf_{\\gamma \\in \\pi} \\int_x \\int_y ||x-y||\\gamma(x,y) dx dy = \\inf_{\\gamma \\in \\pi} \\mathbb{E}_{x,y \\sim \\gamma}[||x-y||]$  \n",
+    "$$W(P_r, P_\\theta) = \\inf_{\\gamma \\in \\pi} \\mathbb{E}_{x,y \\sim \\gamma}[||x-y||]$$\n",
+    "\n",
+    "해당 블로그 글과 별반 차이 없으므로 관두도록 한다."
    ]
   }
  ],
